fix: :bug: hide non breakable overflowing text

--- a/client/src/components/Card/Tasks.module.scss
+++ b/client/src/components/Card/Tasks.module.scss
@@ -57,6 +57,7 @@
     line-height: 14px;
     padding-bottom: 6px;
     padding-left: 14px;
+    overflow: hidden;
 
     &:before {
       content: "–";
